# iPix

./: .gitignore  README.md  pubspec.yaml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/ipix/: MainActivity.kt
android/app/src/main/kotlin/studio/pangu/ipix/: MainActivity.kt
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: async_spawn.dart  simple.dart
linux/: CMakeLists.txt  my_application.cc
linux/flutter/: generated_plugins.cmake
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
rust/: Cargo.toml
rust/db/migrations/: 20240505220130_create_test_table.sql
rust/db/test/: data.sql
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: async_spawn.rs  mod.rs  simple.rs
rust/src/constant/: mod.rs
rust/src/tests/: mod.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/android/src/main/: AndroidManifest.xml
rust_builder/ios/: rust_lib_ipix.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_ipix.podspec
rust_builder/windows/: CMakeLists.txt
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
