[package]
name = "rust_lib_ipix"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = { version = "=2.0.0-dev.33", features = ["log"] }
anyhow = { version = "1.0.64", features = ["backtrace"] }
uuid = "1.4.1"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"         
log = "0.4.21"
flutter_logger={version = "*", features = ["panic"]}
reqwest = { version = "0.12", features = ["json"] }
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.25.0"
tokio = { version = "1", features = ["macros","rt"] }
once_cell = "1.10.0"
sqlx = {version="0.7", features = ["sqlite", "chrono","runtime-tokio"]}
thiserror = "^1.0.59"
openssl = { version = "*", features = ["vendored"] }
[dev-dependencies]
test-context = "0.3.0"
env_logger = {version = "0.11.3"}

# simplelog = { version = "^0.12.0", features = ["paris"] }
# async-trait = "0.1.58"
# test-log = "0.2.16"
